# DVD-Archaeology

./: .gitignore  BTN_IT_IMPLEMENTATION.md  BTN_IT_RESEARCH.md  BUTTON_DETECTION_ALGORITHM.md  DOCUMENTATION_INDEX.md  DVD_MENU_DETECTION_UPDATE.md  DVD_MENU_HIGHLIGHT_DETECTION_RESEARCH.md  DVD_Sample_01_Analysis.md  DVD_Sample_01_FINDINGS.md  DVD_Sample_02.tda  DVD_Sample_2.tda  FFMPEG_REPAIR_PARAMETERS.md  IMPLEMENTATION_SUMMARY.md  OCR_FRAMEWORK_COMPLETE.md  OCR_IMPROVEMENTS.md  OCR_REGRESSION_FRAMEWORK_GUIDE.md  OCR_REGRESSION_TESTING.md  OCR_UPDATE_SUMMARY.md  PROGRESS_SUMMARY_2026-01-31.md  PROJECT_SPEC.md  README.md  RESEARCH_DVD_Sample_01.md  SPU_EXTRACTION_IMPLEMENTATION.md  SPU_TEXT_CLUSTERING_SOLUTION.md  debug_spu_analysis.py  main.py  pyproject.toml
docs/: NAV_PARSE_PGC_VALIDATION.md  README.md  SPU_BUTTON_EXTRACTION_GUIDE.md  SPU_CROSS_DVD_COMPATIBILITY.md  ocr_menu_detection_notes.md
scripts/: analyze_btn_it.py  analyze_btn_it_full.py
tests/: UglyBettyButtonCoordinates  UglyBettyText  conftest.py  helpers.py  manual_tests.txt  sample_paths.py  test_cli_list_stages.py  test_dvd_sample_01_regression.py  test_dvd_sample_sanity.py  test_external_reference_compare.py  test_external_sample_svcd.py  test_external_sample_uglybetty.py  test_external_sample_vcd.py  test_extract_samples.py  test_failures.py  test_json_out_root.py  test_manifest_schema_snapshot.py  test_menu_validation_samples.py  test_nav_parse_samples.py  test_ocr_regression.py  test_pipeline_stub_e2e.py  test_schema_exports.py  test_schema_roundtrip.py  test_segments_samples.py  test_stage_ocr.py  (+12 more)
(+87 files in other folders)
