[project]
name = "dvd-archaeology"
version = "0.1.0"
description = "DVD menu-aware episode extractor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pillow>=12.1.0",
  "pydantic>=2.6",
  "pyparsedvd>=0.0.3",
  "pytesseract>=0.3.13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
dvdmenu-extract = "dvdmenu_extract.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
